<resources>
    <string name="app_name">Purity U2D</string>
    <string name="version">Version</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_about">About</string>

    <string name="activity_settings">Settings</string>
    <string name="activity_fileBrowser">Browse</string>

    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="defaultt">Default</string>
    <string name="undefined">Undefined</string>
    <string name="onReboot">Rebooting …</string>
    <string name="proxy_list">Proxy List</string>
    <string name="wrap">Wrap</string>
    <string name="unwrap">Unwrap</string>

    <string name="dialog_title_downloading">Download in progress …</string>
    <string name="dialog_title_changelog">Changelog</string>
    <string name="dialog_title_readyToInstall">Ready to install</string>
    <string name="dialog_title_md5mismatch">MD5 mismatch</string>
    <string name="dialog_title_rootFail">Root is required</string>

    <string name="dialog_content_about">Developed by %1$s</string>

    <string name="card_title_latestVersion">Latest Version</string>
    <string name="card_title_installedROM">Installed ROM</string>

    <string name="field_filesize">File size</string>
    <string name="filed_filename">File name</string>
    <string name="field_downloaded">Downloaded</string>

    <string name="msg_pleaseWait">Please wait …</string>
    <string name="msg_up_to_date">You\'re up-to-date</string>
    <string name="msg_failed_try_again">Failed, please try again later</string>
    <string name="msg_device_not_supported">Device not supported</string>
    <string name="msg_downloadCanceled">Download canceled</string>
    <string name="msg_downloadComplete">Download complete</string>
    <string name="msg_updateFound">A new ROM version was found</string>
    <string name="msg_changeable">This setting can be changed from the settings section</string>
    <string name="msg_noROMForYou">There\'s no %1$s ROM for %2$s</string>
    <string name="msg_twrp">Automatic installation works only with TWRP recovery. CWM is not supported.</string>
    <string name="msg_activeDownloads">You can\'t leave, you have active downloads</string>
    <string name="msg_invalidFilename">Invalid filename</string>
    <string name="msg_invalidProxy">Invalid proxy configuration</string>
    <string name="msg_troubleProxy">Having trouble connecting? %1$s > %2$s</string>
    <string name="msg_updateRequired">Please update to te latest app version from Play Store</string>
    <string name="msgTitle_versionObs">Version obsolete</string>

    <string name="btn_whatsNew">See what\'s new</string>
    <string name="btn_getIt">Get it now</string>
    <string name="btn_ok">Okay</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="btn_install">Proceed</string>
    <string name="btn_installAnyway">Proceed anyway</string>
    <string name="btn_downloadAgain">Download again</string>

    <string name="settings_category_backgroundCheck">BACKGROUND CHECK</string>
    <string name="settings_category_proxy">PROXY</string>
    <string name="settings_category_downloads">DOWNLOADS</string>
    <string name="settings_category_romBase">ROM BASE</string>

    <string name="settings_switch_backgroundCheck">Background Check</string>
    <string name="settings_textView_backgroundCheckInterval">Background Check Interval</string>

    <string name="settings_switch_useAndroidDM">Use Android Download Manager</string>
    <string name="settings_btn_useProxy">Use proxy</string>
    <string name="settings_btn_downloadLocation">Download location</string>
    <string name="settings_btn_staticFilename">Static filename</string>
    <string name="settings_btn_receiveBeta">Receive test builds</string>
    <string name="settings_btn_updateSource">Update source</string>
    <string name="settings_btn_romBase">Preferred ROM base</string>

    <string name="settings_info_useAndroidDM">Use system\'s built-in download manager to handle downloads</string>
    <string name="settings_info_useStaticFilename">Use the same filename for all downloads</string>
    <string name="settings_info_onPostInstall">Zip files placed under /sdcard/PurityU2D/onPostUpdate/ will be flashed automatically after installing ROM updates.</string>

    <string name="prompt_install1">The ROM was downloaded successfully.\nClick %1$s to reboot and install it now.\nClick %2$s to install later.</string>
    <string name="prompt_install2">The ROM zip already exists with a matching md5.\nClick %1$s to install it now.\nClick %2$s to install later.</string>
    <string name="prompt_md5mismatch">The ROM was downloaded successfully. However MD5 hash does not match the original file.\n\nOriginal:%1$s\nCalculated:%2$s</string>
    <string name="prompt_rootFail">Failed to acquire root access.\nYou may proceed and download ROM updates through the app but ROM installation will not work without root.\nPlease check your superuser app.</string>
    <string name="prompt_romBase">What ROM base do you like to have?</string>
    <string name="prompt_android_version">What version of Android do you like to have?</string>
    <string name="prompt_blankDefault">Leave it blank for default</string>
    <string name="prompt_zipExtension">Do not forget to add .zip file extension</string>
    <string name="receive_latest_version">Receive the latest version</string>
    <string name="toast_restartApp">Restart the application</string>
    <string name="switch_bnrKernel">Backup and restore current kernel</string>
    <string name="switch_wipeCache">Wipe cache partition</string>
    <string name="switch_wipeDalvik">Wipe dalvik cache</string>
    <string name="switch_factoryReset">Factory reset (Clean flash)</string>
    <string name="switch_factoryReset_summary">Wipes data, cache and dalvik cache.</string>
    <string name="title_installQueue">Install queue</string>
    <string name="empty">Empty</string>
    <string name="hint_swipeToInstall">Swipe to install</string>
    <string name="flash_a_zip">Flash a ZIP</string>
    <string name="dialog_content_github">Source on Github</string>

</resources>