<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="?android:attr/listPreferredItemPaddingStart">

        <TextView
            style="?android:attr/preferenceCategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/settings_category_backgroundCheck"
            android:textStyle="bold" />

        <View
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/settings_separator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/switch_bkg_check"
                style="?android:attr/switchPreferenceStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:checked="true"
                android:text="@string/settings_switch_backgroundCheck"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <TextView
            style="?android:attr/preferenceLayoutChild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/settings_textView_backgroundCheckInterval" />

        <LinearLayout
            android:id="@+id/linear_bkg_check_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:descendantFocusability="beforeDescendants"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <TextView
                style="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/hours" />

            <TextView
                android:id="@+id/editText_autocheck_h"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/translucent_oval_button"
                android:clickable="true"
                android:gravity="center"
                android:singleLine="true" />

            <TextView
                style="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="15dp"
                android:text="@string/minutes" />

            <TextView
                android:id="@+id/editText_autocheck_m"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/translucent_oval_button"
                android:gravity="center"
                android:singleLine="true" />
        </LinearLayout>

        <TextView
            style="?android:attr/preferenceCategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/settings_category_proxy"
            android:textStyle="bold" />

        <include layout="@layout/margin_separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/btn_editProxy"
                style="@style/clickableItemStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/switch_useProxy"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title0"
                    style="?android:attr/preferenceLayoutChild"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/settings_btn_useProxy" />

                <TextView
                    android:id="@+id/proxyHost"
                    style="@style/preferenceInformationStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Switch
                android:id="@+id/switch_useProxy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:checked="true" />

        </RelativeLayout>

        <TextView
            style="?android:attr/preferenceCategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/settings_category_downloads"
            android:textStyle="bold" />

        <include layout="@layout/margin_separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/switch_useAndDM"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/title1"
                    style="?android:attr/preferenceLayoutChild"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/settings_switch_useAndroidDM" />

                <TextView
                    style="@style/preferenceInformationStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="36dp"
                    android:text="@string/settings_info_useAndroidDM" />
            </LinearLayout>

            <Switch
                android:id="@+id/switch_useAndDM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:checked="true" />
        </RelativeLayout>

        <include layout="@layout/separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/btn_staticFilename"
                style="@style/clickableItemStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/switch_useStaticFilename"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title2"
                    style="?android:attr/preferenceLayoutChild"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/settings_btn_staticFilename" />

                <TextView
                    style="@style/preferenceInformationStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="36dp"
                    android:text="@string/settings_info_useStaticFilename" />

                <TextView
                    android:id="@+id/textView_staticFilename"
                    style="@style/preferenceInformationStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="36dp" />
            </LinearLayout>

            <Switch
                android:id="@+id/switch_useStaticFilename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:checked="true" />
        </RelativeLayout>

        <include layout="@layout/separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/title3"
                style="?android:attr/preferenceLayoutChild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:text="@string/settings_btn_receiveBeta" />

            <Switch
                android:id="@+id/switch_receiveBeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:checked="true" />

        </RelativeLayout>

        <include layout="@layout/separator" />

        <LinearLayout
            android:id="@+id/btn_dlLoc"
            style="@style/clickableItemStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="?android:attr/preferenceLayoutChild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_btn_downloadLocation" />

            <TextView
                android:id="@+id/textView_dlLoc"
                style="@style/preferenceInformationStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp" />
        </LinearLayout>

        <include layout="@layout/separator" />

        <LinearLayout
            android:id="@+id/btn_upSrc"
            style="@style/clickableItemStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="?android:attr/preferenceLayoutChild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_btn_updateSource" />

            <TextView
                android:id="@+id/textView_upSrc"
                style="@style/preferenceInformationStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp" />
        </LinearLayout>

        <TextView
            style="?android:attr/preferenceCategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/settings_category_romBase"
            android:textStyle="bold" />

        <include layout="@layout/margin_separator" />

        <LinearLayout
            android:id="@+id/btn_romBase"
            style="@style/clickableItemStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="?android:attr/preferenceLayoutChild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_btn_romBase" />

            <TextView
                android:id="@+id/textView_romBase"
                style="@style/preferenceInformationStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp" />

        </LinearLayout>

        <include layout="@layout/separator" />

        <LinearLayout
            android:id="@+id/btn_romApi"
            style="@style/clickableItemStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="?android:attr/preferenceLayoutChild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_android_version" />

            <TextView
                android:id="@+id/textView_romApi"
                style="@style/preferenceInformationStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>