<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/slider"
        android:background="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/msg_twrp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                card_view:cardBackgroundColor="@color/card_background"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <Switch
                        android:id="@+id/switch_restoreKernel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/switch_bnrKernel"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Switch
                        android:id="@+id/switch_wipeCache"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:checked="false"
                        android:text="@string/switch_wipeCache"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Switch
                        android:id="@+id/switch_wipeDalvik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:checked="false"
                        android:text="@string/switch_wipeDalvik"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:orientation="vertical">

                        <Switch
                            android:id="@+id/switch_wipeData"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="@string/switch_factoryReset"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/switch_factoryReset_summary"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                card_view:cardBackgroundColor="@color/card_background"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="0dp"
                            android:text="@string/title_installQueue"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <ProgressBar
                            android:id="@+id/progressBar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_alignParentEnd="true"
                            android:max="1000"
                            android:progressDrawable="@drawable/circular_progress" />

                        <ImageButton
                            android:id="@+id/button_add"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_alignBottom="@+id/progressBar"
                            android:layout_alignEnd="@+id/progressBar"
                            android:layout_alignStart="@+id/progressBar"
                            android:layout_alignTop="@+id/progressBar"
                            android:layout_margin="6dp"
                            android:background="@drawable/fab"
                            android:gravity="center"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_add" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/card_separator" />

                    <LinearLayout
                        android:id="@+id/queueList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/empty" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/primaryColor"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/hint_swipeToInstall"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white" />

        <SeekBar
            android:id="@+id/install_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="1000"
            android:maxWidth="500dp"
            android:thumb="@drawable/thumb" />
    </LinearLayout>
</RelativeLayout>